--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://ccastillo92.github.io/" />
+  <link rel="canonical" href="https://github.com/Ccastillo92/ccastillo92" />
 
   
   
